@@ -8960,7 +8960,7 @@ genLeftShiftLiteral (operand * left, operand * right, operand * result, iCode * 
 #endif
 
   /* I suppose that the left size >= result size */
-//  wassert (getSize (operandType (left)) >= size);
+  wassert (getSize (operandType (left)) >= size);
 
   if (shCount == 0)
     {
@@ -9351,6 +9351,8 @@ genRightShiftLiteral (operand * left, operand * right, operand * result, iCode *
   /* test the LEFT size !!! */
 
   /* I suppose that the left size >= result size */
+  wassert (getSize (operandType (left)) >= size);
+
   if (shCount == 0)
     {
       size = getDataSize (result);
